--- a/DescribeThisDataset.Rmd
+++ b/DescribeThisDataset.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(echo = TRUE)
   library(data.table)
 ```
 
-```{r Diagnosi, echo=FALSE}
+```{r parameters, include=FALSE}
   Dataset= params$Dataset
   Individual= params$Individual
   HeadOfDataset= params$HeadOfDataset
@@ -33,7 +33,26 @@ knitr::opts_chunk$set(echo = TRUE)
   Cols=params$Cols
   ColsFormat=params$ColsFormat
   DetailInformation=params$DetailInformation
+```
   
+```{r first check, echo=FALSE}
+## check that Cols and ColsFormat is a list 
+if (!inherits(Cols, "list")){  
+  stop("parameter Cols must be a list")
+}
+
+if (!inherits(ColsFormat, "list")){  
+  stop("parameter ColsFormat must be a list")
+}
+
+## check if Cols and ColsFormat have the same length
+if (length(Cols)!=length(ColsFormat)){  
+  stop("parameter Cols must have the same length as ColsFormat")
+}
+```
+
+```{r Diagnosi, echo=FALSE}
+
   ## Datatable
   if(!is.data.table(Dataset)){
     Dataset=data.table(Dataset)
@@ -58,21 +77,12 @@ knitr::opts_chunk$set(echo = TRUE)
   }
 ```
 
-```{r check, echo=FALSE}
-## check that Cols and ColsFormat is a list 
-if (!inherits(Cols, "list")){  
-  stop("parameter Cols must be a list")
-}
 
-if (!inherits(ColsFormat, "list")){  
-  stop("parameter ColsFormat must be a list")
-}
-
-## check if Cols and ColsFormat have the same length
-if (length(Cols)!=length(ColsFormat)){  
-  stop("parameter Cols must have the same length as ColsFormat")
-}
+```{r second check, echo=FALSE}
+## check if the format is correct
+for(i in names(Dataset)){}
 ```
+
 
 This is a description of  **`r NameOfDataset`**, this dataset is composed by `r n_of_observations` observations of  `r n_of_variables` variables.
 
@@ -161,32 +171,49 @@ if(Vars_Form_Det){
       if(ColsFormat[form_iteration]=="binary"){
         cat("\n")
         cat(paste0("## Description of **", as.character(i), "**:"))
+        cat("\n")
         
-        compDataset=na.omit(Dataset)
+        data_subset <- Dataset[ , get(i)] 
+        compDataset<-Dataset[complete.cases(data_subset), ]
         
         first_value = unique(compDataset[,get(i)])[1]
         second_value = unique(compDataset[,get(i)])[2]
         
-        prop_firs_value = dim(compDataset[get(i)==first_value,])[1]/n_of_observations*100
-        prop_second_value = dim(compDataset[get(i)==second_value,])[1]/n_of_observations*100
+        n_firs_value = dim(compDataset[get(i)==first_value,])[1]
+        n_second_value = dim(compDataset[get(i)==second_value,])[1]
         
-        DF_binary=data.frame(c(first_value, second_value, NA), c(prop_firs_value, prop_second_value, df_output[2,i] ))
+        prop_firs_value = n_firs_value/n_of_observations*100
+        prop_second_value = n_second_value/n_of_observations*100
+        
+        DF_binary=data.frame(c(first_value, second_value, NA),
+                             c(n_firs_value, n_second_value, df_output[1,i]),
+                             c(prop_firs_value, prop_second_value, df_output[2,i] ))
         cat("\n")
-        print(knitr::kable(DF_binary, col.names = c("values", "Proportion")))
+        print(knitr::kable(DF_binary, col.names = c("Values", "Count", "Proportion")))
         cat("\n")
         
         p=ggplot(Dataset, aes_string(x=i))+
           geom_bar()+
           ggtitle(paste0("Bar graph of ",i, " defined as binary:"))
         suppressMessages(print(p))
+       cat("\n")
+
       }
       if(ColsFormat[form_iteration]=="categorical"){
+        cat("\n")
+        cat(paste0("## Description of **", as.character(i), "**:"))
+        cat("\n")
         p=ggplot(Dataset, aes_string(x=i))+
           geom_bar()+
-          ggtitle(paste0("Bar graph of ",i, " defined as categorical:"))
+          ggtitle(paste0("Bar graph of ",i, " defined as categorical:"))+
+          theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
         suppressMessages(print(p))
+        cat("\n")
       }
       if(ColsFormat[form_iteration]=="continuous"){
+        cat("\n")
+        cat(paste0("## Description of **", as.character(i), "**:"))
+        cat("\n")
         p1=ggplot(Dataset, aes_string(x=i))+
           geom_histogram()+
           ggtitle(paste0("Histogram of ",i, " defined as continuous:"))
@@ -196,16 +223,54 @@ if(Vars_Form_Det){
         geom_boxplot()+
         ggtitle(paste0("Box Plot of ",i, " defined as continuous:"))
         suppressMessages(print(p2))
+        cat("\n")
       }
       if(ColsFormat[form_iteration]=="date"){
+        cat("\n")
+        cat(paste0("## Description of **", as.character(i), "**:"))
+        cat("\n")
+        
         p=ggplot(Dataset, aes_string(x=i))+
           geom_histogram()+
-          ggtitle(paste0("Histogram of ",i, " defined as date:"))
+          scale_x_date(breaks="1 month")+
+          ggtitle(paste0("Histogram of ",i, " defined as date:"))+
+          theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
         suppressMessages(print(p))
+        cat("\n")
       }
-    }
+      if(ColsFormat[form_iteration]=="boolean"){
+        cat("\n")
+        cat(paste0("## Description of **", as.character(i), "**:"))
+        cat("\n")
+        
+        data_subset <- Dataset[ , get(i)] 
+        compDataset<-Dataset[complete.cases(data_subset), ]
+        
+        first_value = unique(compDataset[,get(i)])[1]
+        second_value = unique(compDataset[,get(i)])[2]
+        
+        n_firs_value = dim(compDataset[get(i)==first_value,])[1]
+        n_second_value = dim(compDataset[get(i)==second_value,])[1]
+        
+        prop_firs_value = n_firs_value/n_of_observations*100
+        prop_second_value = n_second_value/n_of_observations*100
+        
+        DF_binary=data.frame(c(first_value, second_value, NA),
+                             c(n_firs_value, n_second_value, df_output[1,i]),
+                             c(prop_firs_value, prop_second_value, df_output[2,i] ))
+        cat("\n")
+        print(knitr::kable(DF_binary, col.names = c("Values", "Count", "Proportion")))
+        cat("\n")
+        
+        p=ggplot(Dataset, aes_string(x=i))+
+          geom_bar()+
+          ggtitle(paste0("Bar graph of ",i, " defined as boolean:"))
+        suppressMessages(print(p))
+        cat("\n")
+
+      }
       form_iteration=form_iteration+1
-    
+    }
 }
 ```
 
@@ -217,8 +282,9 @@ if(Vars_Form_nDet){
       if(ColsFormat[form_iteration]=="binary"){
         cat("\n")
         cat(paste0("Table of **", as.character(i), "**:"))
-        
-        compDataset=na.omit(Dataset)
+        cat("\n")
+        data_subset <- Dataset[ , get(i)] 
+        compDataset<-Dataset[complete.cases(data_subset), ]
         
         first_value = unique(compDataset[,get(i)])[1]
         second_value = unique(compDataset[,get(i)])[2]
@@ -233,13 +299,46 @@ if(Vars_Form_nDet){
         
       }
       if(ColsFormat[form_iteration]=="categorical"){
+        cat("\n")
+        cat(paste0("Table of **", as.character(i), "**:"))
+        cat("\n")
 
       }
       if(ColsFormat[form_iteration]=="continuous"){
+        cat("\n")
+        cat(paste0("Table of **", as.character(i), "**:"))
+        cat("\n")
 
       }
       if(ColsFormat[form_iteration]=="date"){
+        cat("\n")
+        cat(paste0("Table of **", as.character(i), "**:"))
+        cat("\n")
 
+      }
+      if(ColsFormat[form_iteration]=="boolean"){
+        cat("\n")
+        cat(paste0("Table of **", as.character(i), "**:"))
+        cat("\n")
+        
+        data_subset <- Dataset[ , get(i)] 
+        compDataset<-Dataset[complete.cases(data_subset), ]
+        
+        first_value = unique(compDataset[,get(i)])[1]
+        second_value = unique(compDataset[,get(i)])[2]
+        
+        n_firs_value = dim(compDataset[get(i)==first_value,])[1]
+        n_second_value = dim(compDataset[get(i)==second_value,])[1]
+        
+        prop_firs_value = n_firs_value/n_of_observations*100
+        prop_second_value = n_second_value/n_of_observations*100
+        
+        DF_binary=data.frame(c(first_value, second_value, NA),
+                             c(n_firs_value, n_second_value, df_output[1,i]),
+                             c(prop_firs_value, prop_second_value, df_output[2,i] ))
+        cat("\n")
+        print(knitr::kable(DF_binary, col.names = c("Values", "Count", "Proportion")))
+        cat("\n")
       }
     }
       form_iteration=form_iteration+1
