--- a/DescribeThisDataset.Rmd
+++ b/DescribeThisDataset.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "DescribeThisDataset"
-output: html_document
+output: 
+  html_document:
+    toc: TRUE
+    theme: united
 params:
   Dataset: NULL
   Individual: TRUE
@@ -11,78 +14,26 @@ params:
   Cols: list()
   ColsFormat: list()
   DetailInformation: TRUE
+  df_output: df_output
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-```{r library, include=FALSE}
-  if (!require("ggplot2")) install.packages("ggplot2") 
-  library(ggplot2)
-  if (!require("data.table")) install.packages("data.table")
-  library(data.table)
-```
 
 ```{r parameters, include=FALSE}
-  Dataset= params$Dataset
-  Individual= params$Individual
-  HeadOfDataset= params$HeadOfDataset
-  StructureOfDataset= params$StructureOfDataset
-  NameOfDataset= params$NameOfDataset
-  Cols=params$Cols
-  ColsFormat=params$ColsFormat
-  DetailInformation=params$DetailInformation
+  Dataset = params$Dataset
+  Individual = params$Individual
+  HeadOfDataset = params$HeadOfDataset
+  StructureOfDataset = params$StructureOfDataset
+  NameOfDataset = params$NameOfDataset
+  Cols = params$Cols
+  ColsFormat = params$ColsFormat
+  DetailInformation = params$DetailInformation
+  df_output = params$df_output
 ```
   
-```{r first check}
-## check that Cols and ColsFormat is a list 
-if (!inherits(Cols, "list")){  
-  stop("parameter Cols must be a list")
-}
-
-if (!inherits(ColsFormat, "list")){  
-  stop("parameter ColsFormat must be a list")
-}
-
-## check if Cols and ColsFormat have the same length
-if (length(Cols)!=length(ColsFormat)){  
-  stop("parameter Cols must have the same length as ColsFormat")
-}
-```
-
-```{r Diagnosi}
-
-  ## Datatable
-  if(!is.data.table(Dataset)){
-    Dataset=data.table(Dataset)
-  }
-  
-  ## Dimension of the dataset
-  Database_dim<-dim(Dataset)
-  n_of_observations<-Database_dim[1]
-  n_of_variables<-Database_dim[2]
-  
-  ## Table Output
-  row_of_df_output=4
-  df_output<- data.frame(matrix(ncol = n_of_variables, nrow = row_of_df_output))
-  colnames(df_output)<-names(Dataset)
-  rownames(df_output)<-c("missing_count", "missing_percent", "unique_count", "unique_rate")
-  
-  for( i in names(Dataset)){
-    df_output[1,i]=sum(is.na(Dataset[,get(i)]))
-    df_output[2,i]=round((sum(is.na(Dataset[,get(i)]))/n_of_observations)*100, 2)
-    df_output[3,i]=length(unique(Dataset[,get(i)]))
-    df_output[4,i]=round(length(unique(Dataset[,get(i)]))/n_of_observations, 2)
-  }
-```
-
-
-```{r second check}
-## check if the format is correct
-for(i in names(Dataset)){}
-```
-
 This is a description of  **`r NameOfDataset`**, this dataset is composed by `r n_of_observations` observations of  `r n_of_variables` variables.
 
 ### Diagnosi
